# Reels-Editor

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Start Reels Editor.bat  pyproject.toml
.claude/worktrees/agent-a3e39a8433ffcb52b/: pyproject.toml
.claude/worktrees/agent-a3e39a8433ffcb52b/app/: ass_render.py  store.py
.claude/worktrees/agent-a3e39a8433ffcb52b/docs/superpowers/: backlog.md
.claude/worktrees/agent-a3e39a8433ffcb52b/docs/superpowers/plans/: 2026-07-09-first-reel.md  2026-07-10-native-file-picker.md  2026-07-14-word-style-text-toolbar.md  2026-07-15-safe-zones-overlay.md  2026-07-17-font-family-drilldown.md
.claude/worktrees/agent-a3e39a8433ffcb52b/docs/superpowers/specs/: 2026-07-10-design-foundation-design.md  2026-07-10-native-file-picker-design.md  2026-07-12-media-panel-context-panel-design.md  2026-07-12-three-column-frame-design.md  2026-07-15-media-library-design.md  2026-07-15-text-panel-misc-accordion-design.md  2026-07-17-font-family-drilldown-design.md  2026-07-17-text-box-design.md
.claude/worktrees/agent-a3e39a8433ffcb52b/static/: api-ensure-project.js  api-pick-file.js  editor.js  preview.js  seed.js  ui-button-group.js  ui-button.js  ui-color-swatch.js  ui-icon-rail.js  ui-sub-panel-header.js
.claude/worktrees/agent-a3e39a8433ffcb52b/static/css/: base.css
.claude/worktrees/agent-a3e39a8433ffcb52b/static/css/components/: button-group.css  button.css  color-swatch.css  icon-rail.css  panel.css  safe-zones.css  settings-row.css  sub-panel.css
.claude/worktrees/agent-a3e39a8433ffcb52b/tests/: test_models.py
app/: auth.py  (+16 more)
(+314 files in other folders)
